<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#FFFFFF">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <com.google.android.material.appbar.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

                </androidx.appcompat.widget.Toolbar>
            </com.google.android.material.appbar.AppBarLayout>
            <TextView
                android:id="@+id/input_product_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:padding="4dp"
                android:text="@string/product_name"
                android:textColor="@color/colorPrimary"
                android:textSize="13sp" />

            <EditText
                android:id="@+id/input_product_names"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_marginEnd="150dp"
                android:background="@drawable/rounded_edittext"
                android:hint="Enter a product name"
                android:inputType="text"
                android:padding="4dp"
                android:singleLine="true"
                android:textColor="@color/colorAccent" />

            <TextView
                android:id="@+id/input_product_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="4dp"
                android:text="@string/product_desc"
                android:textColor="@color/colorPrimary"
                android:textSize="13sp" />

            <EditText
                android:id="@+id/input_product_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginEnd="150dp"
                android:background="@drawable/rounded_edittext"
                android:hint="Enter a product description"
                android:inputType="text"
                android:padding="4dp"
                android:singleLine="true"
                android:textColor="@color/colorAccent" />

            <TextView
                android:id="@+id/input_product_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="4dp"
                android:text="@string/product_price"
                android:textColor="@color/colorPrimary"
                android:textSize="13sp" />

            <EditText
                android:id="@+id/input_product_prices"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginEnd="150dp"
                android:background="@drawable/rounded_edittext"
                android:hint="Enter a product price"
                android:padding="4dp"
                android:singleLine="true"
                android:textColor="@color/colorAccent" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/prt_create"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="Create"
                    android:textAllCaps="false" />

                <Button
                    android:id="@+id/prt_clear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_toRightOf="@id/prt_create"
                    android:text="Clear"
                    android:textAllCaps="false" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>